--- a/index.html
+++ b/index.html
@@ -1,1 +1,118 @@
-<!-- Agrega aquí la estructura HTML de tu sitio web -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Lyft</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+    <link rel="stylesheet" href="assets/icomoon/style.css">
+  </head>
+  <body>
+    <nav>
+      <div class="logo">
+        <img src="assets/images/logo-white.png" alt="">
+      </div>
+      <div class="menu white">
+        <ul>
+          <li>Drive</li>
+          <li>Explore</li>
+          <li>Help</li>
+          <li class="log-in">Log in</li>
+        </ul>
+      </div>
+    </nav>
+    <section class="sign-up">
+      <h2 class="purple">TURN MILES </br>INTO MONEY</h2>
+      <p class="purple text-uppercase subtitle">Sign up to drive with Lyft.</p>
+      <input type="text" name="" value="Phone number">
+      <button type="button" name="button">Become a driver</button>
+      <a href="#">Sign up to ride</a>
+      <div class="legal">
+        <p>Already applied? Check the status of your application here.</p>
+        <p>Earn money for inviting friends to drive. Learn more.</p>
+      </div>
+    </section>
+    <section class="benefits white">
+      <div class="text-benefits">
+        <h2>A RIDE IN MINUTES</h2>
+        <p>Request a ride and you’ll be on your way in minutes. Request. Ride. Repeat.</p>
+        <h2>SERIOUS ABOUT SAFETY</h2>
+        <p>From knowing the color of your driver’s car to our 24/7 Trust & Safety Team, we got you.</p>
+        <h2>HAPPY DRIVERS. </br>HAPPY RIDERS.</h2>
+        <p>Ride with us and you’ll see why 9 out of 10 rides end with five stars.</p>
+      </div>
+      <div class="use-image">
+        <img src="assets/images/phone.png" alt="">
+      </div>
+    </section>
+    <section class="videos">
+      <div class="text-video">
+        <div class="un-tercio">
+          <h6 class="text-uppercase">Watch</h6>
+          <h3 class="text-uppercase title-video">Amplify your ride</h3>
+          <p>Lyft´s new emblem, Amp, is the secret to smooth pickups. Lighting up dashboards nationwide, the device makes it easy for passengers  and drivers to find each other.</p>
+        </div>
+        <iframe width="560" height="480" src="https://www.youtube.com/embed/fLSmUWOYpKw" frameborder="0" allowfullscreen class="dos-tercios"></iframe>
+      </div>
+      <div class="first-video">
+        <iframe width="560" height="480" src="https://www.youtube.com/embed/V7j8Aqxmbs8" frameborder="0" allowfullscreen class="dos-tercios"></iframe>
+        <div class="un-tercio">
+          <h6 class="text-uppercase">Watch</h6>
+          <h3 class="text-uppercase title-video">June</h3>
+          <p>In an animated short film by Academy Award-winner John Kahrs, a lonely window in historic South Chicago is empowered to start sharing the ride - and sharing her life, too.</p>
+        </div>
+      </div>
+      <div class="first-video">
+        <div class="un-tercio clear-left">
+          <h6 class="text-uppercase">Watch</h6>
+          <h3 class="text-uppercase title-video">A good thing going</h3>
+          <p>Launching on TV and online, “Ride on the Bright Side” shows how Lyft continues to prioritize happy drivers, short ETAs, and safety.</p>
+        </div>
+        <iframe width="560" height="480" src="https://www.youtube.com/embed/xj2VWLV0xCU" frameborder="0" allowfullscreen class="dos-tercios"></iframe>
+      </div>
+    </section>
+    <footer class="white clear-left">
+      <div class="footer-menu">
+        <div class="column-footer">
+          <ul>
+            <li>LOG IN</li>
+            <li> Help</li>
+            <li>Cities</li>
+            <li>Airports</li>
+            <li>Fare Estimate</li>
+          </ul>
+        </div>
+        <div class="column-footer">
+          <ul>
+            <li>PARTNER</li>
+            <li>Partnerships</li>
+            <li>Enterpise</li>
+            <li>Ambassadors</li>
+            <li>Developers</li>
+          </ul>
+        </div>
+        <div class="column-footer">
+          <ul>
+            <li>LEARN</li>
+            <li>Safety</li>
+            <li>Blog</li>
+            <li>Press</li>
+            <li>Careers</li>
+          </ul>
+        </div>
+        <div class="column-footer">
+          <img src="assets/images/apple-store.svg" alt="">
+          <img src="assets/images/google-play.png" alt="">
+          <img src="assets/images/microsoft.png" alt="">
+        </div>
+      </div>
+      <div class="social-media">
+        <a href="#" class="circle"><span class="icon-facebook"></span></a>
+        <a href="#" class="circle"><span class="icon-instagram"></span></a>
+        <a href="#" class="circle"><span class="icon-twitter"></span></a>
+      </div>
+    <hr></hr>
+    <p class="copyright">@ 2017 Lyft, Inc.TermsPrivacy</p>
+    </footer>
+  </body>
+</html>
