--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
         <img src="assets/images/phone.png" alt="">
       </div>
     </section>
-    <section class="videos">
-      <div class="text-video">
+   <!-- <section class="videos">
+      <div class="text-video">-->
+    <section class="text-video">
         <div class="un-tercio">
           <h6 class="text-uppercase">Watch</h6>
           <h3 class="text-uppercase title-video">Amplify your ride</h3>
