--- a/index.html
+++ b/index.html
@@ -45,31 +45,30 @@
         <img src="assets/images/phone.png" alt="">
       </div>
     </section>
-   <!-- <section class="videos">
-      <div class="text-video">-->
-    <section class="text-video">
-        <div class="un-tercio">
+    <section class="video">
+      <div>
+        <div class="text-description">
           <h6 class="text-uppercase">Watch</h6>
           <h3 class="text-uppercase title-video">Amplify your ride</h3>
           <p>Lyft´s new emblem, Amp, is the secret to smooth pickups. Lighting up dashboards nationwide, the device makes it easy for passengers  and drivers to find each other.</p>
         </div>
-        <iframe width="560" height="480" src="https://www.youtube.com/embed/fLSmUWOYpKw" frameborder="0" allowfullscreen class="dos-tercios"></iframe>
+        <iframe width="560" height="480" src="https://www.youtube.com/embed/fLSmUWOYpKw" frameborder="0" allowfullscreen class="video-description"></iframe>
       </div>
-      <div class="first-video">
-        <iframe width="560" height="480" src="https://www.youtube.com/embed/V7j8Aqxmbs8" frameborder="0" allowfullscreen class="dos-tercios"></iframe>
-        <div class="un-tercio">
+      <div>
+        <iframe width="560" height="480" src="https://www.youtube.com/embed/V7j8Aqxmbs8" frameborder="0" allowfullscreen class="video-description"></iframe>
+        <div class="text-description">
           <h6 class="text-uppercase">Watch</h6>
           <h3 class="text-uppercase title-video">June</h3>
           <p>In an animated short film by Academy Award-winner John Kahrs, a lonely window in historic South Chicago is empowered to start sharing the ride - and sharing her life, too.</p>
         </div>
       </div>
-      <div class="first-video">
-        <div class="un-tercio clear-left">
+      <div>
+        <div class="text-description clear-left">
           <h6 class="text-uppercase">Watch</h6>
           <h3 class="text-uppercase title-video">A good thing going</h3>
           <p>Launching on TV and online, “Ride on the Bright Side” shows how Lyft continues to prioritize happy drivers, short ETAs, and safety.</p>
         </div>
-        <iframe width="560" height="480" src="https://www.youtube.com/embed/xj2VWLV0xCU" frameborder="0" allowfullscreen class="dos-tercios"></iframe>
+        <iframe width="560" height="480" src="https://www.youtube.com/embed/xj2VWLV0xCU" frameborder="0" allowfullscreen class="video-description"></iframe>
       </div>
     </section>
     <footer class="white clear-left">
